[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "askpg"
version = "0.3.3"
description = "An immersive terminal RAG conversation over Paul Graham's essays and tweets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "openai>=2.0,<3",
  "prompt-toolkit>=3.0,<4",
  "rich>=14,<15",
]

[project.scripts]
askpg = "askpg.cli:main"

[tool.setuptools.packages.find]
include = ["askpg*"]
